more papers uploaded

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "bonwoo-koo9/bonwoo-koo9.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile_bonwoo2.jpg"
+  avatar           : "profile_photo_bonwoo_main.jpg"
   name             : "Bonwoo Koo"
   pronouns         : # example: "she/her"  
   bio              : "Undergraduate Student at KAIST"
